# nexusgate

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
ai-orchestrator/: go.mod
ai-orchestrator/cmd/orchestrator/: main.go
ai-orchestrator/internal/config/: config.go
ai-orchestrator/internal/discovery/: index.go
ai-orchestrator/internal/llm/: anthropic.go  openai.go  router.go
ai-orchestrator/internal/translator/: translator.go
contract-engine/: go.mod
contract-engine/cmd/engine/: main.go
contract-engine/internal/generator/: generator.go
contract-engine/internal/snp/: handler.go
contract-engine/internal/store/: store.go
deployments/: nexusgate.toml
docs/: PRD.md
gateway-core/: Cargo.toml
gateway-core/src/: config.rs  error.rs  main.rs  management.rs  middleware.rs  proxy.rs  routing.rs  server.rs
gateway-core/src/connectors/: database.rs  graphql.rs  grpc.rs  manifest.rs  mod.rs  rest.rs
gcp-deployment/: .env.example  .gitignore  Makefile  README.md
gcp-deployment/config/: nexusgate.toml
gcp-deployment/docker/: ai-orchestrator.Dockerfile  contract-engine.Dockerfile  gateway-core.Dockerfile  security.Dockerfile
gcp-deployment/k8s/: configmap.yaml  db-init-job.yaml  ingress.yaml  namespace.yaml  secrets.yaml.example  service-account.yaml
gcp-deployment/k8s/ai-orchestrator/: deployment.yaml  service.yaml
gcp-deployment/scripts/: build-images.sh  deploy.sh  teardown.sh
gcp-deployment/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: init-db.sql
security/: go.mod
(+10 files in other folders)
